<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout_root_signup"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#0c1c1c"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relative_header_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navbar_fill"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingRight="0dp" >

        <LinearLayout
            android:id="@+id/linear_layout_signup_back"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/relative_layout_signup_highlited"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp" >

                <ImageButton
                    android:id="@+id/imgbtn_back_signup"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:baselineAlignBottom="false"
                    android:clickable="false"
                    android:duplicateParentState="true"
                    android:paddingBottom="13dp"
                    android:paddingTop="13dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/back" />

                <ImageView
                    android:id="@+id/image_view_back_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:clickable="false"
                    android:duplicateParentState="true"
                    android:paddingBottom="13dp"
                    android:paddingTop="13dp"
                    android:src="@drawable/sc" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollview_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/et_pregnancy_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragnency_data" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_zilla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/zilla" />

                <Spinner
                    android:id="@+id/sp_zilla"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_upozilla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/upozilla" />

                <Spinner
                    android:id="@+id/sp_upozilla"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp" />
            </RelativeLayout>

            <EditText
                android:id="@+id/et_mobile_number_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_one" />

            <EditText
                android:id="@+id/et_mobile_number_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_two" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>